Fixed image position on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,11 @@ body {
     flex-grow: 1;
 }
 
+@media (max-width: 750px) {
+    .about-img {
+        margin-left: 15%;
+    }
+}
 footer {
     color: #888888;
     border-top: 1px solid #eeeeee;
